# IARC_repo

./: .gitignore  A10Gun.lua  DEVELOPMENT.md  GunLit.lua  Makefile  README.md  app.py  desktop_app.py  dev_build_desktop.sh  dev_run_desktop.sh  dev_run_native.sh  dev_run_streamlit.sh  dev_setup.sh  dev_test.sh  distance_100.ino  gps_vis.py  gpws.ino  made_putt_counter_v1_WORKING.ino  native_desktop_app.py  putt_count_v1_WORKING_2.ino  pyproject.toml  requirements.txt  streamlit_desktop_app.py
property-lookup-tool/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
property-lookup-tool/src/property_lookup/: __init__.py  cli.py  config.py  models.py
property-lookup-tool/src/property_lookup/output/: __init__.py  formatters.py
property-lookup-tool/src/property_lookup/providers/: __init__.py  base.py  mock_provider.py  public_records_provider.py  rentcast_provider.py  scott_county_mn_provider.py  zillow_bridge_provider.py
property-lookup-tool/src/property_lookup/providers/mn/: __init__.py  county_provider_registry.py  metrogis_provider.py  minnesota_public_provider.py  mn_geospatial_commons_provider.py
property-lookup-tool/src/property_lookup/providers/mn/county_providers/: __init__.py  anoka_county_provider.py  carver_county_provider.py  (+5 more)
property-lookup-tool/src/property_lookup/services/: address_normalizer.py  property_service.py
property-lookup-tool/tests/: test_cli.py  test_formatters.py  test_minnesota_public_provider.py  test_mn_geospatial_commons_provider.py  test_mock_provider.py  test_property_service.py  test_rentcast_provider.py  test_scott_county_mn_provider.py
(+34 files in other folders)
